@@ -60,6 +60,7 @@ import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -103,6 +104,10 @@ public class SvgImporter {
 
     private Rectangle2D.Double viewBox;
 
+    private double width;
+    
+    private double height;
+    
     /**
      * Constructor.
      * @param st Shape tag
@@ -273,23 +278,27 @@ public class SvgImporter {
             }
 
             this.viewBox = viewBox;
+            this.width = width;
+            this.height = height;
 
             Map<String, Integer> cachedBitmaps = new HashMap<>();
             SvgStyle style = new SvgStyle(this, idMap, rootElement, cachedBitmaps);
             Matrix transform = new Matrix();
 
             if (fill) {
-                double ratioX = rect.getWidth() / width / SWF.unitDivisor;
-                double ratioY = rect.getHeight() / height / SWF.unitDivisor;
-                transform = Matrix.getScaleInstance(ratioX, ratioY);
-                transform.translate(origXmin / SWF.unitDivisor / ratioX, origYmin / SWF.unitDivisor / ratioY);
+                double ratioX = rect.getWidth() / width;
+                double ratioY = rect.getHeight() / height;
+                transform = Matrix.getScaleInstance(ratioX / SWF.unitDivisor, ratioY / SWF.unitDivisor);
+                transform.translate(origXmin / ratioX, origYmin / ratioY);
             }
 
             transform = transform.preConcatenate(Matrix.getTranslateInstance(-viewBox.x, -viewBox.y));
             if (viewBox.height != 0 && viewBox.width != 0) {
-                transform = transform.preConcatenate(Matrix.getScaleInstance(width / viewBox.width, height / viewBox.height));
+                double ratioX = width / viewBox.width;
+                double ratioY = height / viewBox.height;
+                transform = transform.preConcatenate(Matrix.getScaleInstance(ratioX, ratioY));
             }
-
+                        
             processSvgObject(idMap, shapeNum, shapes, rootElement, transform, style, morphShape, cachedBitmaps, false);
             if (rootElement.hasAttribute("ffdec:objectType")
                     && "morphshape".equals(rootElement.getAttribute("ffdec:objectType"))
@@ -326,7 +335,7 @@ public class SvgImporter {
 
         return (Tag) st;
     }
-
+    
     /**
      * Applies animation to the element.
      * @param element Element
@@ -625,7 +634,7 @@ public class SvgImporter {
         double x0 = 0;
         double y0 = 0;
 
-        StyleChangeRecord scrStyle = getStyleChangeRecord(shapeNum, style, morphShape);
+        StyleChangeRecord scrStyle = getStyleChangeRecord(shapeNum, style, morphShape, transform);
         int fillStyle = morphShape ? scrStyle.fillStyle0 : scrStyle.fillStyle1;
         int lineStyle = scrStyle.lineStyle;
         scrStyle.stateFillStyle0 = true;
@@ -1440,15 +1449,27 @@ public class SvgImporter {
         processCommands(shapeNum, shapes, pathCommands, transform, style, morphShape, false);
     }
 
+    public double getWidth() {
+        return width;
+    }
+
+    public double getHeight() {
+        return height;
+    }
+
+    public Rectangle2D.Double getViewBox() {
+        return viewBox;
+    }        
+
     //Stub for w3 test. TODO: refactor and move to test directory. It's here because of easy access - compiling single file
     private static void svgTest(String name) throws IOException, InterruptedException {
         System.err.println("running test " + name);
         if (!new File(name + ".original.svg").exists()) {
-            URL svgUrl = new URL("http://www.w3.org/Graphics/SVG/Test/20061213/svggen/" + name + ".svg");
+            URL svgUrl = URI.create("http://www.w3.org/Graphics/SVG/Test/20061213/svggen/" + name + ".svg").toURL();
             byte[] svgData = Helper.readStream(svgUrl.openStream());
             Helper.writeFile(name + ".orig.svg", svgData);
 
-            URL pngUrl = new URL("http://www.w3.org/Graphics/SVG/Test/20061213/png/full-" + name + ".png");
+            URL pngUrl = URI.create("http://www.w3.org/Graphics/SVG/Test/20061213/png/full-" + name + ".png").toURL();
             byte[] pngData = Helper.readStream(pngUrl.openStream());
             Helper.writeFile(name + ".orig.png", pngData);
         }
@@ -1964,7 +1985,7 @@ public class SvgImporter {
         }
     }
 
-    private StyleChangeRecord getStyleChangeRecord(int shapeNum, SvgStyle style, boolean morphShape) {
+    private StyleChangeRecord getStyleChangeRecord(int shapeNum, SvgStyle style, boolean morphShape, Matrix transform) {
         StyleChangeRecord scr = new StyleChangeRecord();
 
         scr.stateNewStyles = true;
@@ -2008,7 +2029,8 @@ public class SvgImporter {
 
             ILINESTYLE lineStyle = shapeNum <= 3 ? new LINESTYLE() : new LINESTYLE2();
             lineStyle.setColor(getRGB(shapeNum, lineColor));
-            lineStyle.setWidth((int) Math.round(style.getStrokeWidth() * SWF.unitDivisor));
+            double scale = Math.max(transform.scaleX, transform.scaleY);
+            lineStyle.setWidth((int) Math.round(style.getStrokeWidth() * scale * SWF.unitDivisor));
             SvgLineCap lineCap = style.getStrokeLineCap();
             SvgLineJoin lineJoin = style.getStrokeLineJoin();
             if (lineStyle instanceof LINESTYLE2) {
@@ -2088,7 +2110,7 @@ public class SvgImporter {
         return parseLength(value, relativeTo);
     }
 
-    private double parseLength(String value, double relativeTo) {
+    public double parseLength(String value, double relativeTo) {
         if (value == null) {
             throw new NumberFormatException();
         }
